<resources>
    <string name="app_name">MySibgu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--menu-->
    <string name="menu_news">Новости</string>
    <string name="menu_events">События</string>
    <string name="menu_shedule">Расписание</string>
    <string name="menu_unstudents">Абитуриентам</string>
    <string name="menu_tools">Настройки</string>
    <string name="menu_edit">О приложении</string>
    <string name="menu_about">Об Университете</string>
    <string name="menu_faculties">Факультеты</string>
    <string name="menu_services">Дополнительно</string>
    <string name="menu_exit">Выход</string>
    <string name="news_details">Детали</string>

    <!--services-->
    <string name="serv_cabinet">Личный кабинет</string> <!-- https://cabinet.sibsu.ru/ -->
    <string name="serv_library_bashgu">ЭБС БашГУ</string> <!-- https://elib.bashedu.ru/ -->
    <string name="serv_library_biblioclub">ЭБС \"Biblioclub\"</string> <!-- http://biblioclub.ru/ -->
    <string name="serv_library_lan">ЭБС \"Лань\"</string> <!-- https://e.lanbook.com/ -->
    <!--faculties-->

    <string name="fac_tech">Технологический</string>
    <string name="fac_emf">Естественно-математический</string>
    <string name="fac_ped">Педагогический</string>
    <string name="fac_yurid">Юридический</string>
    <string name="fac_econ_pravo">Экономика и право</string>

    <string name="retry_connection">Повторить подключение</string>
    <string name="podelitsya">Поделиться</string>

    <string name="ContentDesImage">Image</string>
    <string name="link">Ссылка</string>

</resources>
