<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_uni_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/menu_events"/>
        <item
            android:id="@+id/nav_shedule"
            android:icon="@drawable/ic_menu_shedule"
            android:title="@string/menu_shedule" />
        <item
            android:id="@+id/nav_unstudents"
            android:icon="@drawable/ic_menu_unstudents"
            android:title="@string/menu_unstudents" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about"/>
        <item
            android:id="@+id/nav_faculties"
            android:icon="@drawable/ic_faculties"
            android:title="@string/menu_faculties"/>
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_services"
            android:title="@string/menu_services"/>
    </group>

    <group
        android:id="@+id/nav_profile_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/menu_edit" />
    </group>
</menu>
