<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/light_gray_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/serv_own_cab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/serv_cabinet"
            app:icon="@drawable/ic_user"
            app:iconGravity="textStart"
            app:iconPadding="15dp"
            app:iconSize="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/serv_lib_bashgu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/serv_library_bashgu"
            app:icon="@drawable/ic_book"
            app:iconGravity="textStart"
            app:iconPadding="15dp"
            app:iconSize="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/serv_lib_biblio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/serv_library_biblioclub"
            app:icon="@drawable/ic_book"
            app:iconGravity="textStart"
            app:iconPadding="15dp"
            app:iconSize="24dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/serv_lib_lan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/serv_library_lan"
            app:icon="@drawable/ic_book"
            app:iconGravity="textStart"
            app:iconPadding="15dp"
            app:iconSize="24dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>